--- a/static/index.html
+++ b/static/index.html
@@ -13,5 +13,6 @@
 <canvas id="chart" width="1000" height="600"></canvas>
 
 <script src="scripts.js" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
